@@ -5,6 +5,7 @@
 -add sprite layeredupdates.
 -add cursors get_cursor_types.
 -add vector object.
+-revise mixer processing.
 
 0.30    2021-04-28
 -center display frame.
